# Agentic-Boards-Gemini

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AWS_DEPLOYMENT.md  Dockerfile  GCP_DEPLOYMENT.md  LICENSE  LOCAL_DEPLOYMENT.md  README.md  TUNNEL_STATUS.txt  backup_data.sh  cloudbuild.yaml  deploy-gcp.sh  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt  service_account.json
backend/scripts/: index_databricks_metadata.py  index_metadata.py
backend/src/: config.py  main.py
backend/src/agent/: agent_adk.py  graph.py  state.py  test_modify_dashboard_tool.py  tools.py
backend/src/agent/nodes/: answer.py  modify_viz.py  query.py  router.py  search.py  visualization.py
backend/src/agent/prompts/: guardrail.py  system.py
backend/src/api/: live_session_state.py  routes_auth.py  routes_bigquery.py  routes_charts.py  routes_chat.py  routes_databricks.py  routes_live.py  routes_workspace.py  test_routes_live.py
backend/src/bigquery/: client.py  test_bq.py
backend/src/cube/: client.py  models.py
backend/src/databricks/: __init__.py  client.py  sql_validator.py
backend/src/db/: models.py  session.py
backend/src/llm/: __init__.py  accenture_client.py  auth.py  gateway_client.py  langchain_wrapper.py  models.py  test_llm.py
backend/src/metadata/: databricks_store.py  embeddings.py  schema_cache.py  vector_store.py
backend/src/toolguard/: validator.py
backend/src/utils/: summarizer.py
cube/: cube.js
data/: test_auth.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  (+2 more)
(+56 files in other folders)
