[project]
name = "agentic-boards-backend"
version = "0.1.0"
authors = [
    { name = "Anduri Roshan" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.0,<2.0.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "sse-starlette>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "msal>=1.31.0",
    "pymilvus[milvus_lite]>=2.4.0",
    "sentence-transformers>=3.0.0",
    "databricks-connect>=15.0.0",
    "databricks-sql-connector>=3.0.0",
    "pyspark>=3.5.0",
    "pandas>=2.0.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
